fixed paragraph spacing on itineraries pages

--- a/css/style_itinerary.css
+++ b/css/style_itinerary.css
@@ -194,7 +194,7 @@ p{
 
   font-family: "Interstate-Reg";
   font-size: 18px;
-  padding-top: 25px
+  padding-top: 25px;
   line-height: 28px;
   margin:0;
 
